envoy-gateway.yaml
static_resources:
  clusters:
  - name: foo
    type: STATIC
    load_assignment:
      cluster_name: foo
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8080
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8081
  - name: bar
    type: STATIC
    load_assignment:
      cluster_name: bar
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 9090
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 9091
  - name: nonexist
    type: STATIC
    load_assignment:
      cluster_name: nonexist
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 4040
  - name: tcpreset
    type: STATIC
    load_assignment:
      cluster_name: tcpreset
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 3000
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 7001
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              # no retry!
              - match:
                  prefix: "/foo/code-503/retry-istio"
                route:
                  cluster: foo
                  prefix_rewrite: "/code/503"
                  retry_policy:
                    retry_on: "connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes"
                    num_retries: 3
              - match:
                  prefix: "/foo/code-503/retry-5xx"
                route:
                  cluster: foo
                  prefix_rewrite: "/code/503"
                  retry_policy:
                    retry_on: "5xx"
                    num_retries: 3
              - match:
                  prefix: "/foo"
                route:
                  cluster: foo
              - match:
                  prefix: "/bar"
                direct_response:
                  status: 200
                  body: { inline_string: "hello world, plaintext" }
              # TODO(jianfeih): verify the not listening vs timeout behavior in envoy.
              # https://serverfault.com/questions/521359/why-do-some-connections-time-out-and-others-get-refused
              # yes.
              - match:
                  prefix: "/nonexist/"
                route:
                  cluster: nonexist
                  retry_policy:
                    # Data report
                    # - only "reset", retried 3 times for non existing port.
                    # - only "connect-failure", retried, same.
                    retry_on: "reset"
                    num_retries: 3
              # yes.
              - match:
                  prefix: "/nonexist/retry-connect-failure"
                route:
                  cluster: nonexist
                  retry_policy:
                    retry_on: "connect-failure"
                    num_retries: 3
              # yes.
              - match:
                  prefix: "/tcpreset"
                route:
                  cluster: tcpreset
                  retry_policy:
                    # Data report
                    # "reset": yes, retried.
                    # "connect-failure": not retried.
                    retry_on: "reset"
                    num_retries: 3
              # no.
              - match:
                  prefix: "/tcpreset/retry-connect-failure"
                route:
                  cluster: tcpreset
                  retry_policy:
                    retry_on: "connect-failure"
                    num_retries: 3
          http_filters:
          - name: envoy.filters.http.router
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 15001
